fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -282,6 +282,17 @@ a:focus {
   		text-align: left;
   		margin: 1em;
 	}
+    
+    .nav-bottom a:hover,
+.nav-bottom a:focus,
+.nav-bottom a:active,
+.nav .nav-current,
+.nav .nav-current:link,
+.nav .nav-current:visited { 
+    background-color: #9ad2db;
+    
+    color: #fff;
+}
 
 @media only screen and (min-width: 60em) {
       
